--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <h2>@container</h2>
 
     <h3>fluid container</h3>
-    <div>This is fluid container and it will go full width of the page. With some margins.</div>
+    <div class="container">This is fluid container and it will go full width of the page. With some margins.</div>
 
     <h3>center container</h3>
-    <div>This is centered container and it will go till the specified width and center content.</div>
+    <div class="container container-center">This is centered container and it will go till the specified width and center content.</div>
 
     <hr>
 
