--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
     <h2>@Links</h2>
 
-    <a href="https://www.youtube.com/">Primary Link</a>
-    <a href="/">Secondary Link</a>
+    <a class="link link-primary" href="https://www.youtube.com/">Primary Link</a>
+    <a class="link link-secondary" href="/">Secondary Link</a>
 
     <hr>
 
