--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <div class="container">This is fluid container and it will go full width of the page. With some margins.</div>
 
     <h3>center container</h3>
-    <div class="container container-center">This is centered container and it will go till the specified width and center content.</div>
+    <div class="container container-center">This is centered container and it will go till the specified width and
+        center content.</div>
 
     <hr>
 
@@ -49,7 +50,7 @@
     <h3>unordered list</h3>
     <p class="para">We dont want to show bullets in the unordered list. We will remove that using CSS</p>
 
-    <ul>
+    <ul class="list-non-bullet">
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
@@ -57,15 +58,15 @@
 
     <h3>unordered Inline list</h3>
     <p>Instead of going in new row, we will create a list which will take columns.</p>
-    <ul>
-        <li>Inline Item One</li>
-        <li>Inline Item Two</li>
-        <li>Inline Three</li>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline">Inline Item One</li>
+        <li class="list-item-inline">Inline Item Two</li>
+        <li class="list-item-inline">Inline Three</li>
     </ul>
 
     <h3>reversed order lists</h3>
     <p>Counting will go reverse for this list</p>
-    <ol>
+    <ol reversed>
         <li>milk</li>
         <li>bread</li>
         <li>banana</li>
