--- a/index.html
+++ b/index.html
@@ -76,18 +76,21 @@
 
     <h2>@nav</h2>
 
-    <nav>
-        <div>IAMDEVELOPER</div>
-        <ul>
-            <li>
-                <a href="/">Home</a>
+    <nav class="navigation container">
+        <div class="nav-brand">IAMDEVELOPER</div>
+       
+        <ul class="list-non-bullet nav-pills">
+            
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">Home</a>
             </li>
-            <li>
-                <a href="/"> Products</a>
+            <li class="list-item-inline">
+                <a class="link link-active" href="/"> Products</a>
             </li>
-            <li>
-                <a href="/">About</a>
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">About</a>
             </li>
+
         </ul>
     </nav>
 
