--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 
     <h2>@header</h2>
 
-    <header>
+    <header class="hero">
         <!-- <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFBVhYYbcaytA/profile-displayphoto-shrink_400_400/0/1618367101918?e=1629331200&v=beta&t=eUJ7wc8PdBrghOcJKmLHNUFQo-u7VV-xby93tSs-BFQ"> -->
 
-        <img src="./images/hero.svg">
-        <h1>Heading inside header/hero</h1>
+        <img class="hero-img" src="./images/hero.svg">
+        <h1 class="hero-heading" >Aman the <span class="heading-inverted"> web developer</span> </h1>
     </header>
 
     <hr>
