--- a/index.html
+++ b/index.html
@@ -109,13 +109,18 @@
 
     <h2>@section</h2>
 
-    <section>
-        <h3>white section</h3>
-        <p>This will have white background</p>
+    <section class="section">
+        <div class="container container-center">
+            <h1>white section</h1>
+            <p>Tailwind includes an expertly-crafted default color palette out-of-the-box that is a great starting point if you don’t have your own specific branding in mind.This will have white background</p>
+        </div>
     </section>
-    <section>
-        <h3>off white section</h3>
-        <p>This will have grey background</p>
+
+    <section class="section ow">
+        <div class="container container-center">
+        <h1>off white section</h1>
+        <p>Tailwind includes an expertly-crafted default color palette out-of-the-box that is a great starting point if you don’t have your own specific branding in mind.This will have grey background</p>
+        </div>
     </section>
 
     <hr>
