--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
     <nav class="navigation container">
         <div class="nav-brand">IAMDEVELOPER</div>
-       
+
         <ul class="list-non-bullet nav-pills">
-            
+
             <li class="list-item-inline">
                 <a class="link link-active" href="/">Home</a>
             </li>
@@ -102,7 +102,7 @@
         <!-- <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFBVhYYbcaytA/profile-displayphoto-shrink_400_400/0/1618367101918?e=1629331200&v=beta&t=eUJ7wc8PdBrghOcJKmLHNUFQo-u7VV-xby93tSs-BFQ"> -->
 
         <img class="hero-img" src="./images/hero.svg">
-        <h1 class="hero-heading" >Aman the <span class="heading-inverted"> web developer</span> </h1>
+        <h1 class="hero-heading">Aman the <span class="heading-inverted"> web developer</span> </h1>
     </header>
 
     <hr>
@@ -112,14 +112,16 @@
     <section class="section">
         <div class="container container-center">
             <h1>white section</h1>
-            <p>Tailwind includes an expertly-crafted default color palette out-of-the-box that is a great starting point if you don’t have your own specific branding in mind.This will have white background</p>
+            <p>Tailwind includes an expertly-crafted default color palette out-of-the-box that is a great starting point
+                if you don’t have your own specific branding in mind.This will have white background</p>
         </div>
     </section>
 
     <section class="section ow">
         <div class="container container-center">
-        <h1>off white section</h1>
-        <p>Tailwind includes an expertly-crafted default color palette out-of-the-box that is a great starting point if you don’t have your own specific branding in mind.This will have grey background</p>
+            <h1>off white section</h1>
+            <p>Tailwind includes an expertly-crafted default color palette out-of-the-box that is a great starting point
+                if you don’t have your own specific branding in mind.This will have grey background</p>
         </div>
     </section>
 
@@ -127,12 +129,18 @@
 
     <h2>@footer</h2>
 
-    <footer>
-        <div>Some small headings inside</div>
-        <ul>
-            <li>Github</li>
-            <li>LinkedIn</li>
-            <li>Twitter</li>
+    <footer class="footer">
+        <div class="footer-header">Some small headings inside</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline"> 
+                <a class="link" href="/">Github</a> 
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">LinkedIn</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">Twitter</a>
+            </li>
         </ul>
     </footer>
 
