docs: updated blogs

--- a/blogs.html
+++ b/blogs.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
     <title>Blogs | Aman</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
+
 <body>
-    
+
 
     <nav class="navigation container">
         <div class="nav-brand">I AM DEVELOPER</div>
@@ -30,15 +32,66 @@
 
 
 
-
     <header class="hero">
 
-        <h1 class="hero-heading">My <span class="heading-inverted"> Blogs</span> </h1>
-        <h2> assignment for mark 5</h2>
+        <h1 class="hero-heading">Read My <span class="heading-inverted"> Blogs</span> </h1>
     </header>
+
+
+
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>off white section</h1>
+            <p>This will have grey background</p>
+
+            <a class="link link-primary" href="https://www.youtube.com/">Primary Link</a>
+        </div>
+    </section>
+
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>white section</h1>
+            <p>This will have white background</p>
+            <a class="link link-primary" href="https://www.youtube.com/">Primary Link</a>
+        </div>
+    </section>
+
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>off white section</h1>
+            <p>This will have grey background</p>
+            <a class="link link-primary" href="https://www.youtube.com/">Primary Link</a>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1>white section</h1>
+            <p>This will have white background</p>
+            <a class="link link-primary" href="https://www.youtube.com/">Primary Link</a>
+        </div>
+    </section>
+
+
+    <footer class="footer">
+        <div class="footer-header">Find Me Online</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="https://github.com/amansaini0003">Github</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://www.linkedin.com/in/aman-saini-0003/">LinkedIn</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://twitter.com/aman_saini_0003">Twitter</a>
+            </li>
+        </ul>
+    </footer>
 
 
 
 
 </body>
+
 </html>
