--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Home | Aman</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
+
 <body>
 
     <nav class="navigation container">
@@ -28,11 +30,10 @@
     </nav>
 
 
-    
-    <header class="hero">
-        <!-- <img src="https://media-exp1.licdn.com/dms/image/C4E03AQFBVhYYbcaytA/profile-displayphoto-shrink_400_400/0/1618367101918?e=1629331200&v=beta&t=eUJ7wc8PdBrghOcJKmLHNUFQo-u7VV-xby93tSs-BFQ"> -->
 
-        <img class="hero-img" src="./images/hero.svg">
+    <header class="hero">
+
+        <img class="hero-img" src="./images/hero_red.svg">
         <h1 class="hero-heading">Aman the <span class="heading-inverted"> web developer</span> </h1>
     </header>
 
@@ -53,7 +54,7 @@
             <p>
                 I like to Showcase my work and thus, you can see my projects hosted online.
             </p>
-            <a class="link link-primary" href="https://github.com/amansaini0003/">Browse Projects</a>
+            <a class="link link-primary" href="/projects.html">Browse Projects</a>
         </div>
     </section>
 
@@ -64,22 +65,22 @@
             <p>
                 I also working on some technical and non-technical blogs. I like to document my journey of learning.
             </p>
-            <a class="link link-secondary" href="https://github.com/amansaini0003/">Read Blogs</a>
+            <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
         </div>
     </section>
 
-    
+
     <footer class="footer">
-        <div class="footer-header">Social Media Presence</div>
+        <div class="footer-header">Find Me Online</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="/">Github</a>
+                <a class="link" href="https://github.com/amansaini0003">Github</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">LinkedIn</a>
+                <a class="link" href="https://www.linkedin.com/in/aman-saini-0003/">LinkedIn</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Twitter</a>
+                <a class="link" href="https://twitter.com/aman_saini_0003">Twitter</a>
             </li>
         </ul>
     </footer>
@@ -87,4 +88,5 @@
 
 
 </body>
+
 </html>
