--- a/blogs.html
+++ b/blogs.html
@@ -33,7 +33,7 @@
 
 
     <header class="hero">
-
+        <img class="hero-img" src="./images/blog.svg">
         <h1 class="hero-heading">Read My <span class="heading-inverted"> Blogs</span> </h1>
     </header>
 
@@ -41,37 +41,56 @@
 
     <section class="section ow">
         <div class="container container-center">
-            <h1>off white section</h1>
-            <p>This will have grey background</p>
+            <h1>Templates in C++</h1>
+            <p>Hello Learners, Today in this tutorial we will learn about the Templates in C++ with some easy and
+                comprehensible example. A template is one of the powerful and simple features of ....</p>
 
-            <a class="link link-primary" href="https://www.youtube.com/">Primary Link</a>
+            <a class="link link-primary" href="https://www.codespeedy.com/templates-in-cpp/">Read More</a>
         </div>
     </section>
 
 
     <section class="section">
         <div class="container container-center">
-            <h1>white section</h1>
-            <p>This will have white background</p>
-            <a class="link link-primary" href="https://www.youtube.com/">Primary Link</a>
+            <h1>Implementation of Comb sort in C++</h1>
+            <p>Hello Learners, Today in this tutorial we will learn about the Implementation of Comb Sort in C++. The
+                concept behind the Comb Sort and Bubble Sort is almost the same or we can say....</p>
+            <a class="link link-primary" href="https://www.codespeedy.com/implementation-of-comb-sort-in-c/">Read
+                More</a>
         </div>
     </section>
 
     <section class="section ow">
         <div class="container container-center">
-            <h1>off white section</h1>
-            <p>This will have grey background</p>
-            <a class="link link-primary" href="https://www.youtube.com/">Primary Link</a>
+            <h1>Factorial of Large Number Using boost multiprecision in C++</h1>
+            <p>Hello learners, today in this tutorial we will learn how to find the factorial of large numbers in C++
+                using boost multi-precision library. We can easily find the factorial of small....</p>
+            <a class="link link-primary"
+                href="https://www.codespeedy.com/factorial-of-large-number-using-boost-multiprecision-in-c/">Read
+                More</a>
         </div>
     </section>
 
     <section class="section">
         <div class="container container-center">
-            <h1>white section</h1>
-            <p>This will have white background</p>
-            <a class="link link-primary" href="https://www.youtube.com/">Primary Link</a>
+            <h1>C++ program to fill whole memory</h1>
+            <p>Hello learners, today in this tutorial we will learn how to write a program in C++ that can fill the
+                whole memory of our system. With the help of the new keyword, we can allocate ....</p>
+            <a class="link link-primary" href="https://www.codespeedy.com/c-program-to-fill-whole-memory/">Read More</a>
         </div>
     </section>
+
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>Minimum operations to make all elements equal in array in C++</h1>
+            <p>Hello learners, today in this tutorial we will learn how to count minimum number operations to make all
+                elements equal in an array in C++ using some easy and comprehensible example....</p>
+            <a class="link link-primary"
+                href="https://www.codespeedy.com/minimum-operation-to-make-all-elements-equal-in-array-in-cpp/">Read
+                More</a>
+        </div>
+    </section>
+
 
 
     <footer class="footer">
