--- a/projects.html
+++ b/projects.html
@@ -30,44 +30,107 @@
     </nav>
 
     <header class="hero">
+        <img class="hero-img" src="./images/project.svg">
         <h1 class="hero-heading">My <span class="heading-inverted"> Projects</span> </h1>
     </header>
 
 
-    <ul class="list-non-bullet">
-        <li>
+    <section class="section">
+        <div class="container container-center">
+            <h2>6. Rythm Tunes</h2>
+            <small>July, 2021</small>
+            <p>
+                Do you listen songs? You would find some good recommendations for all the genre. Made using
+                <strong>ReactJS</strong> with love.
+            </p>
+            <a class="link link-primary" href="https://9g4y5.csb.app/">Live Project</a>
+            <a class="link link-secondary" href="https://github.com/amansaini0003/rythm-tunes">GitHub Link</a>
 
-            <div class="container container-center">
-                <h2>Indian Food Quiz App?</h2>
-                <small>June, 2021</small>
-                <p>
-                    A CLI App built using <strong>NodeJS</strong>.
-                </p>
-                <a class="link link-primary" href="google.com">Live Project</a>
-                <a class="link link-secondary" href="github.com">View Source Code on GitHUb</a>
+        </div>
 
-            </div>
+    </section>
 
+    <section class="section ow">
+        <div class="container container-center">
+            <h2>5. Food Emoji Interpreter</h2>
+            <small>July, 2021</small>
+            <p>
+                A web app built using <strong>ReactJS</strong>.This will interpret emojis. Put an emoji and it will tell
+                what that means.
+            </p>
+            <a class="link link-primary" href="https://f6vhi.csb.app/">Live Project</a>
+            <a class="link link-secondary" href="https://github.com/amansaini0003/food-emoji-interpreter">GitHub
+                Link</a>
 
-        </li>
+        </div>
 
-        <li>
-
-            <div class="container container-center">
-                <h2>How well do you know me?</h2>
-                <small>June, 2021</small>
-                <p>
-                    A CLI App built using <strong>NodeJS</strong>.
-                </p>
-                <a class="link link-primary" href="google.com">Live Project</a>
-                <a class="link link-secondary" href="github.com">View Source Code on GitHUb</a>
-
-            </div>
+    </section>
 
 
-        </li>
 
-    </ul>
+    <section class="section">
+        <div class="container container-center">
+            <h2>4. Article-Rewriter</h2>
+            <small>June, 2021</small>
+            <p>
+                A web app built using <strong>HTML, CSS</strong> and <strong>JavaScript</strong>. It will rewrite a
+                chunk of content in a slightly different manner which is a requirement in the SEO sector.
+            </p>
+            <a class="link link-primary" href="https://articlerewriter.netlify.app/">Live Project</a>
+            <a class="link link-secondary" href="https://github.com/amansaini0003/Article-Rewriter">GitHub Link</a>
+
+        </div>
+
+    </section>
+
+
+
+    <section class="section ow">
+        <div class="container container-center">
+            <h2>3. Banana-Talk</h2>
+            <small>June, 2021</small>
+            <p>
+                A translation web app built using <strong>HTML, CSS</strong> and <strong>JavaScript</strong>. It will
+                translate English to Banana(Minion) Language.
+            </p>
+            <a class="link link-primary" href="https://english-2-banana-language.netlify.app/">Live Project</a>
+            <a class="link link-secondary" href="https://github.com/amansaini0003/Banana-Speak">GitHub Link</a>
+
+        </div>
+
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h2>2. Indian Food Quiz App.</h2>
+            <small>June, 2021</small>
+            <p>
+                A CLI App built using <strong>NodeJS</strong>.
+            </p>
+            <a class="link link-primary"
+                href="https://replit.com/@amansaini0003/Indian-Food-Quiz#index.js?embed=1&output=1">Live Project</a>
+            <a class="link link-secondary" href="https://github.com/amansaini0003/CLI-App-2-Food-Quiz">GitHub Link</a>
+
+        </div>
+
+    </section>
+
+    <section class="section ow">
+        <div class="container container-center">
+            <h2>1. How well do you know me?</h2>
+            <small>June, 2021</small>
+            <p>
+                A CLI App built using <strong>NodeJS</strong>.
+            </p>
+            <a class="link link-primary" href="https://replit.com/@amansaini0003/CLIAPP1#index.js?embed=1&output=1">Live
+                Project</a>
+            <a class="link link-secondary" href="https://github.com/amansaini0003/CLI-App-1-My-Introduction">GitHub
+                Link</a>
+
+        </div>
+
+    </section>
+
 
 
     <footer class="footer">
@@ -84,10 +147,6 @@
             </li>
         </ul>
     </footer>
-
-
-
-
 
 
 </body>
